fix post-no spacing

--- a/src/styles/feedback.scss
+++ b/src/styles/feedback.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   opacity: 0;
   overflow: visible;
-  text-wrap: nowrap;
+  white-space: nowrap;
   padding-left: 0;
   font-size: 0.9rem;
   justify-content: center;
